# charge_schedule_for_mobile_robot

./: CMakeLists.txt  README.txt  rules.txt  結果分析.txt
data/: eta100_2025-01-06_22-45.csv  eta100_2025-01-06_22-46.csv  eta100_2025-01-06_22-47.csv  no_mutation_first_sbx.csv  parents.csv  parents_2024-12-10_15-01-09.csv  parents_2024-12-10_23-38.csv  parents_2024-12-10_23-39.csv  parents_2024-12-10_23-44.csv  parents_2024-12-10_23-45.csv  parents_2024-12-10_23-47.csv  parents_2024-12-10_23-48.csv  parents_2024-12-10_23-49.csv  parents_2024-12-10_23-54.csv  parents_2024-12-10_23-59.csv  parents_2024-12-12_00-45.csv  parents_2024-12-12_15-51.csv  parents_2024-12-12_16-00.csv  parents_2024-12-12_16-11.csv  parents_2024-12-12_16-14.csv  parents_2024-12-12_16-26.csv  parents_2024-12-12_16-27.csv  parents_2024-12-12_16-28.csv  parents_2024-12-12_16-31.csv  parents_2024-12-12_16-54.csv  parents_2024-12-12_17-07.csv  parents_2024-12-12_17-15.csv  parents_2024-12-12_17-17.csv  parents_2024-12-12_17-18.csv  parents_2024-12-12_17-19.csv  parents_2024-12-12_17-22.csv  parents_2024-12-12_17-28.csv  parents_2024-12-12_17-29.csv  parents_2024-12-12_17-34.csv  parents_2024-12-12_17-35.csv  parents_2024-12-12_17-37.csv  parents_2024-12-13_00-37.csv  parents_2024-12-13_00-38.csv  parents_2024-12-13_12-11.csv  parents_2024-12-13_12-23.csv  (+17 more)
data/12-15/: parents_2024-12-15_16-19.csv  parents_2024-12-15_16-35.csv  parents_2024-12-15_17-47.csv  parents_2024-12-15_17-58.csv
data/12-25/: parents_2024-12-25_19-40.csv  parents_2024-12-25_19-41.csv
data/sbx/: eta1.csv  eta10.csv  eta11.csv  eta12.csv  eta13.csv  eta14.csv  eta15.csv  eta16.csv  eta17.csv  eta18.csv  eta19.csv  eta2.csv  eta20.csv  eta3.csv  eta4.csv  eta5.csv  eta6.csv  eta7.csv  eta8.csv  eta9.csv
data/sbx_test/: parents.csv
include/: nsgaii.hpp  two_point_trans_schedule.hpp
params/: charge_schedule.yaml  three_change_schedule.yaml  two_charge_schedule.yaml
src/: charge_schedule.cpp  mutate_test.cpp  nsgaii.cpp  sbx_test.cpp  sbx_test2.cpp  sbx_test3.cpp  two_main.cpp
src/details/: nsgaii.cpp  two_point_trans_schedule.cpp
